gap fix col home

--- a/assets/custom-base-overrides.css
+++ b/assets/custom-base-overrides.css
@@ -38,11 +38,16 @@ body{
     }
 
     .collection ul{
-        column-gap: 20px !important;
+        column-gap: 0 !important;
+        margin-right: -20px;
     }
 
     .collection li{
         flex: 0 1 calc(50% - 20px);
         box-sizing: border-box;
+    }
+
+    .collection li:nth-child(odd){
+        margin-right: 20px;
     }
 }
